--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Market Brasil | O Shopping das Melhores Ofertas</title>
-    <meta name="description" content="Acesse as melhores ofertas selecionadas por IA na Hotmart, Shopee, Mercado Livre e muito mais.">
+    <title>All Market Brasil | Inteligência de Mercado</title>
+    <meta name="description" content="A ferramenta definitiva para afiliados e pesquisadores de mercado com IA.">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Plus Jakarta Sans', sans-serif; }
-        .glass { background: rgba(255, 255, 255, 0.8); backdrop-filter: blur(12px); }
-        .premium-shadow { box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.05), 0 4px 6px -2px rgba(0, 0, 0, 0.02); }
+        ::-webkit-scrollbar { width: 8px; }
+        ::-webkit-scrollbar-track { background: #f8fafc; }
+        ::-webkit-scrollbar-thumb { background: #e2e8f0; border-radius: 10px; }
+        ::-webkit-scrollbar-thumb:hover { background: #cbd5e1; }
     </style>
 <script type="importmap">
 {
@@ -25,8 +26,9 @@
 }
 </script>
 </head>
-<body class="bg-[#FDFDFD] text-slate-900">
+<body class="bg-[#FDFDFD] text-slate-900 antialiased">
     <div id="root"></div>
+    <!-- O caminho relativo ./ é crucial para o Vite no Netlify -->
     <script type="module" src="./index.tsx"></script>
 </body>
 </html>
