--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 </head>
 <body class="bg-[#FDFDFD] text-slate-900 antialiased">
     <div id="root"></div>
-    <!-- O caminho relativo ./ é crucial para o Vite no Netlify -->
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
